@@ -1,3 +1,7 @@
 Small HTTP
 ==========
 HTTP/AWS Test Bed
+
+Run
+===
+java -ms8m -mx8m -XX:PermSize=24m -XX:MaxPermSize=24m -jar target/small-http-0.0.1-SNAPSHOT.jar server etc/config.yml 
